--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   rive_splash_screen: ^0.1.0
   google_fonts: ^3.0.1
   flutter_secure_storage: ^5.0.2
+  flutter_advanced_drawer: ^1.3.2
+  font_awesome_flutter: ^10.1.0
+  http: ^0.13.4
 
 flutter_native_splash:
   color: "#8555f6"
@@ -81,6 +84,7 @@ flutter:
   assets:
     - res/rive/todorive.riv
     - res/gifs/loginsignupback.gif
+    - res/images/defaultImage.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
