--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,15 @@ dependencies:
   flutter_advanced_drawer: ^1.3.2
   font_awesome_flutter: ^10.1.0
   http: ^0.13.4
+  image_picker: ^0.8.5+3
+  image_cropper: ^2.0.3
+  carousel_slider: ^4.1.1
+  photo_view: ^0.14.0
+  dropdown_button2: ^1.4.0
+  dio: ^4.0.6
+  path_provider: ^2.0.11
+  open_file: ^3.2.1
+  expand_widget: ^2.1.0
 
 flutter_native_splash:
   color: "#8555f6"
@@ -84,7 +93,9 @@ flutter:
   assets:
     - res/rive/todorive.riv
     - res/gifs/loginsignupback.gif
-    - res/images/defaultImage.jpg
+    - res/images/defaultProf.jpg
+    - res/gifs/emptyList.gif
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
