--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   grouped_list: ^5.1.2
   intl: ^0.17.0
   uuid: ^3.0.6
+  responsive_sizer: ^3.1.0
 
 flutter_native_splash:
   color: "#8555f6"
