--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   intl: ^0.17.0
   uuid: ^3.0.6
   responsive_sizer: ^3.1.0
+  shimmer: ^2.0.0
 
 flutter_native_splash:
   color: "#8555f6"
